GPC/tests/examples/fail/wrongNamespace.gpc

GPRM::Kernel::Test a;

a = GPRM::Kernel::Blah::Blah();

int GPRM::Test::wrongNamespace() {
    return 0;
}
